--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -3,12 +3,14 @@
   {
    "cell_type": "markdown",
    "id": "8e7d6408-7c26-4f0c-8177-da16901b258f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# 01. intro\n",
     "## shortcut\n",
     "\n",
-    "- ctrl + ente: 현재 셀 샐행\n",
+    "- ctrl + enter: 현재 셀 샐행\n",
     "- shift + enter: 현재 셀 실행 $ 아래로 이동\n",
     "- alt + enter: 현재 셀 실행 & 아래에 새로운 셀 추가"
    ]
@@ -22,7 +24,7 @@
     "\n",
     "1. Apple / apple\n",
     "2. git add. / git add .\n",
-    "3. 3. message / massage"
+    "3. message / massage"
    ]
   },
   {
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "248ba822-a461-4d8f-8865-693706c827f3",
    "metadata": {},
    "outputs": [],
@@ -184,20 +186,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "252e12b4-34a3-4520-b4be-9596362daa9c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'c' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mtype\u001b[39m(\u001b[43mc\u001b[49m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'c' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "complex"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -297,9 +298,7 @@
   {
    "cell_type": "markdown",
    "id": "33952cfb-8f66-400c-98b2-0ed4794346bf",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 1.3 string\n",
     "- ', \" 를 이용하여 표현"
@@ -413,7 +412,9 @@
   {
    "cell_type": "markdown",
    "id": "b403ba59-c505-4149-8a18-7ad03809eb86",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### string interpolation"
    ]
@@ -497,9 +498,7 @@
   {
    "cell_type": "markdown",
    "id": "e37f0b71-1a86-496f-9b50-773822360cc1",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.1 산술연산자"
    ]
@@ -583,9 +582,7 @@
   {
    "cell_type": "markdown",
    "id": "179eaade-2e1e-4d61-9a3a-af2a552e7306",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.2 비교연산자"
    ]
@@ -668,9 +665,7 @@
   {
    "cell_type": "markdown",
    "id": "24c7c36f-6a1c-42b6-88f8-fc80961b7113",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.3 논리연산자\n",
     "- and: 양쪽 모두 True일 때, True를 반환\n",
@@ -797,9 +792,7 @@
   {
    "cell_type": "markdown",
    "id": "66048974-4eb2-43a3-a596-5f478002b4f7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.4 복합 연산자"
    ]
@@ -847,9 +840,7 @@
   {
    "cell_type": "markdown",
    "id": "f0bcdb42-d37f-45d6-bc0d-d2d09e7f871b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2.5 기타 연산자"
    ]
@@ -1210,6 +1201,673 @@
     "print(bool({}))\n",
     "print(bool({1,2,3}))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60c63616-06b3-4b05-9e8d-548f2715231d",
+   "metadata": {},
+   "source": [
+    "# 4. 시퀀스 자료형\n",
+    "- 시퀀스는 데이터의 **순서대로** 나열된 자료구조(순서대로 나열되었다는 것은 정렬된 것과 다르다.)\n",
+    "  1. List\n",
+    "  2. Tuple\n",
+    "  3. Range\n",
+    "  4. String"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29be3c0a-2b47-43b0-a827-3ac7a57e91b2",
+   "metadata": {},
+   "source": [
+    "## 4.1 List (리스트, 배열)\n",
+    "- 선언: var_name = [value1, value2, value3, ...]\n",
+    "- 접근: var_name[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "35840d35-0af9-43be-93e7-01f12529d2f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "print(l)\n",
+    "print(type(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "03d950e9-8cf2-47bd-bde0-1590781d8728",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['서울', '대전', '부산']\n",
+      "부산\n",
+      "['서울', '대구', '부산']\n"
+     ]
+    }
+   ],
+   "source": [
+    "location = ['서울', '대전', '부산']\n",
+    "print(location)\n",
+    "print(location[2])\n",
+    "\n",
+    "location[1] = '대구'\n",
+    "print(location)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50212602-9238-49a6-a1ed-3d950b64d840",
+   "metadata": {},
+   "source": [
+    "## 4.2 Tuple(튜플)\n",
+    "- 선언: var_name = (value1, value2, value3, ...)\n",
+    "- 접근: var_name[index]\n",
+    "- 수정 불가능하다(immutable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6ab8ae4f-7393-46fc-b69d-6b8aae107d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('서울', '대전', '대구')\n",
+      "서울\n"
+     ]
+    }
+   ],
+   "source": [
+    "location = ('서울', '대전', '대구')\n",
+    "print(location)\n",
+    "print(location[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a28ae653-38ee-4af2-a0a1-7a350beec41f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '부산' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m location[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43m부산\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name '부산' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "location[2] = 부산"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dab7618a-5390-4cc2-b1d8-6ab416861b29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 1\n",
+    "y = 2\n",
+    "\n",
+    "(x, y) = (y, x)\n",
+    "print(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63e62200-d596-467a-8fb0-273d12a16b36",
+   "metadata": {},
+   "source": [
+    "## Range\n",
+    "- range(n): 0부터 n-1까지 범위\n",
+    "- range(n, m): n부터 m-1까지의 범위\n",
+    "- range(n, m, s): n부터 m-1까지 s만큼 증가하는 범위"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c4955333-a72e-4068-8cb1-8f2c73bba00e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 45)\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lotto = range(45)\n",
+    "print(lotto)\n",
+    "print(list(lotto))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f76d0056-840c-4907-a1a3-996fcfec04d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(1, 46)\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lotto = range(1, 46)\n",
+    "print(lotto)\n",
+    "print(list(lotto))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf7a2d15-71b9-4fc4-a2a0-61e79bfb718b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even = range(2, 20, 2)\n",
+    "print(list(even))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "669eb6ea-b84b-41a2-b03b-662c19a6f31a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, -2, -4, -6, -8, -10, -12, -14, -16, -18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = range(0, -20, -2)\n",
+    "print(list(numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38c6505a-e708-4035-9d4e-1bf6a74840d9",
+   "metadata": {},
+   "source": [
+    "## 4.4 String\n",
+    "- 기본 데이터 구조 참고"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ac0523d-ebd4-4feb-b360-7dfa16204988",
+   "metadata": {},
+   "source": [
+    "## 4.5 시퀀스에서 활용 가능한 연산/함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "db6f7bd0-8013-4a2d-818f-a1538414c946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = ['a', 'b', 'c', 'd', 'e']\n",
+    "my_tuple = (6, 7, 8, 9, 10)\n",
+    "my_range = range(5)\n",
+    "my_string = '가나다라마'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "eb414bba-8a16-4159-86fd-6fa5b8bd87fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "6\n",
+      "0\n",
+      "가\n"
+     ]
+    }
+   ],
+   "source": [
+    "# indexing\n",
+    "print(my_list[0])\n",
+    "print(my_tuple[0])\n",
+    "print(my_range[0])\n",
+    "print(my_string[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "533c7df8-d87c-4eeb-aec1-89c4de7f0cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b']\n",
+      "(6, 7)\n",
+      "range(0, 2)\n",
+      "가나\n"
+     ]
+    }
+   ],
+   "source": [
+    "# slicing\n",
+    "# var_name[index1:index2]\n",
+    "print(my_list[0:2])\n",
+    "print(my_tuple[0:2])\n",
+    "print(my_range[0:2])\n",
+    "print(my_string[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4fbf09bd-2b12-4ff3-8cbd-6a42bac0b895",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'e']\n",
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 인덱스 생략\n",
+    "print(my_list[3:])\n",
+    "print(my_list[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "599d1e1c-7587-41c9-8a7d-a0b946abebd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "['c', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 음수 인덱스\n",
+    "print(my_list[-1])\n",
+    "print(my_list[-3:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8b99feb6-cb09-43c7-82a0-e0feced14168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'c', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step\n",
+    "print(my_list[::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "eb2df405-25e6-4c46-99ff-bb8d61d64427",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in, not in\n",
+    "print(1 in my_list)\n",
+    "print('a' in my_list)\n",
+    "\n",
+    "print('z' not in my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c4b69c01-7029-4741-9b8e-fc165a14dde7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 1, 2, 3, 4, 5]\n",
+      "(6, 7, 8, 9, 10, 1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# concatennation\n",
+    "print(my_list + [1, 2, 3, 4, 5])\n",
+    "print(my_tuple + (1, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "cebb637b-9426-43cd-bd30-3bd4ef7f7412",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'a', 'b', 'c', 'd', 'e']\n",
+      "aaaaa\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# *\n",
+    "print(my_list * 2)\n",
+    "print('a' * 5)\n",
+    "\n",
+    "# [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "print([0]*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ec6ba65c-fcb6-4bf6-a198-6e6f4b5dd4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "03b9890e-4e7c-4204-9ecf-54f24ad489bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b734c878-fdbf-4eaf-abae-410dfbb3433b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(my_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5244cd06-0ac8-45e2-8e99-7a9a6ed4886d",
+   "metadata": {},
+   "source": [
+    "# 5. 시퀀스형이 아닌 자료구조"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "755b74ba-6bc6-4cae-92af-51526c031de6",
+   "metadata": {},
+   "source": [
+    "## 5.1 set\n",
+    "- 수학에서의 집합과 비슷한 개념(중복값이 없음)\n",
+    "\n",
+    "- 선언: var_name = {value1, value2, value3, ...}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b12557f6-a9f1-43c8-bc42-1d0b34ca7e1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_set_a = {1, 2, 3, 4, 5, 5, 5, 5, 5}\n",
+    "my_set_b = {1, 3, 5, 7, 9}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "24435f2d-88cb-4754-83be-328931a091d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 3, 5, 7, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_set_a)\n",
+    "print(my_set_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "179f37ff-4b19-49b3-83cc-f81464d00307",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4}\n",
+      "{1, 2, 3, 4, 5, 7, 9}\n",
+      "{1, 3, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_set_a - my_set_b)\n",
+    "print(my_set_a | my_set_b)\n",
+    "print(my_set_a & my_set_b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0695b66a-14cd-4b72-b16a-84a12f36f4a0",
+   "metadata": {},
+   "source": [
+    "## 5.2 Dictionary\n",
+    "- 선언: var_name = {key1: value1, key2: value2, key3: value3, ...}\n",
+    "- 접근: var_name[key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "dd67a0d6-fbfa-4262-82ad-a7d8f95931a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'서울': '02', '경기': '031'}\n",
+    "print(my_dict['서울'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "4967e08c-3c25-47bc-abdd-3132f1ca7c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_info = {\n",
+    "    'name': 'Paul', \n",
+    "    'location': 'Seoul',\n",
+    "    'age': 10,\n",
+    "    'skill': ['python', 'git'],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "494bdca5-1703-42ef-8e84-231f594410fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paul\n",
+      "10\n",
+      "['python', 'git']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_info['name'])\n",
+    "print(my_info['age'])\n",
+    "print(my_info['skill'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ed3953-469a-4e9c-bef3-3fd2b1e66987",
+   "metadata": {},
+   "source": [
+    "**데이터 타입**\n",
+    "\n",
+    "**자료구조**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9235b5f9-8e70-4844-a928-95c4fbfb10c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
